# prism

./: .gitignore  README.md  requirements.txt
src/dataset_generation/carla/: README.md  dataset_generator.py  dataset_generator1.py  drive.py  objects.json  remove_objects.py  rgb_viewer.py  rgb_viewer_processed.py  set_town.py  spawn_traffic.py
src/mem/: requirements.txt
src/mem/elevation_map_msgs/: CMakeLists.txt
src/mem/elevation_mapping_cupy/: CMakeLists.txt
src/mem/elevation_mapping_cupy/config/: core.yaml  rgb.yaml
src/mem/elevation_mapping_cupy/config/core/: carla_setup.yaml  carla_setup_bev.yaml  core_carla.yaml  core_carla_bev.yaml  plugin_config.yaml  plugin_config_bev.yaml
src/mem/elevation_mapping_cupy/config/setups/turtle_bot/: boxi_semantics_image.yaml  turtle_bot_semantics_image.yaml
src/mem/elevation_mapping_cupy/launch/: all.launch  carla_bev.launch  carla_rgb.launch  debug_turtlesim_simple_example.launch  depth2pc.launch
src/mem/elevation_mapping_cupy/rviz/: boxi.rviz  carla.rviz
src/mem/elevation_mapping_cupy/script/elevation_mapping_cupy/: elevation_mapping.py  rgb.py  rgb2.py  rgb3.py  semantic_map.py  traversability_filter.py
src/mem/elevation_mapping_cupy/script/elevation_mapping_cupy/fusion/: image_color.py
src/mem/elevation_mapping_cupy/script/elevation_mapping_cupy/plugins/: combined_cost.py  example.py  plugin_manager.py  traversability2.py
src/mem/elevation_mapping_cupy/script/elevation_mapping_cupy/plugins/custom/: cnn.py  (+35 more)
src/mem/elevation_mapping_cupy/src/: elevation_mapping_ros.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/include/: AStarPlanner.hpp  Planner.hpp  Utility.h
src/planning/launch/: planner.launch
src/planning/scripts/: a.txt  astar.py  carla_control.py  carla_control_big.py  grid_map_visualizer.py  hybrid_astar.py  image_pub.py  plan.py  terrain_map.py
src/planning/src/: AStarPlanner.cpp  Planner.cpp  planner_node.cpp
src/rse/: CMakeLists.txt  package.xml
src/rse/config/: topics.yaml  topics_anymal.yaml
src/rse/models/: __init__.py  pidnet.py
src/rse/scripts/: bag2frames.py  custom.py  detect.py  eval.py  frames.py  grandtour_all.sh  grandtour_bag2frames.sh  id2color.py  mapillary.py  segmentation_node.py  train.py  trim_frames.py  v2f.py  video.py
(+5 files in other folders)
